Creato con Colaboratory

--- a/Grep_Challenge_10623060.ipynb
+++ b/Grep_Challenge_10623060.ipynb
@@ -1138,9 +1138,9 @@
         "\n",
         "  grep::get_lines(input_lines, argv[2]);\n",
         "  grep::search_string(input_lines, argv[1], local_filtered_lines, local_lines_number);\n",
-        "  //grep::print_result(local_filtered_lines, local_lines_number);\n",
+        "  grep::print_result(local_filtered_lines, local_lines_number);\n",
         "\n",
-        "  MPI_Finalize;\n",
+        "  MPI_Finalize();\n",
         "\n",
         "  return 0;\n",
         "}"
@@ -1150,9 +1150,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "0570ed81-f88c-447e-ddaf-84d377e35bd3"
+        "outputId": "beb211ab-5ee3-4010-e75a-4a9658be81f5"
       },
-      "execution_count": 176,
+      "execution_count": 279,
       "outputs": [
         {
           "output_type": "stream",
@@ -1259,7 +1259,7 @@
         "                      lines_found &lines, unsigned &local_lines_number){\n",
         "\n",
         "    \n",
-        "    int rank, size;     // for storing this process' rank, and the number of processes\n",
+        "    int rank, size;     \n",
         "    MPI_Comm_size(MPI_COMM_WORLD, &size);\n",
         "    MPI_Comm_rank(MPI_COMM_WORLD, &rank);\n",
         "\n",
@@ -1305,13 +1305,81 @@
         "      if(line.find(search_string) != std::string::npos){\n",
         "        unsigned index = local_lines_number+i;\n",
         "        lines.push_back({index, line});\n",
-        "        std::cout << local_lines_number+i << \":\" << line << std::endl;\n",
         "      }\n",
         "    }\n",
+        "    MPI_Barrier(MPI_COMM_WORLD);\n",
         "  \n",
         "  }\n",
         "  void print_result(const lines_found & lines, unsigned local_lines_number){\n",
-        "    \n",
+        "    int rank, size;     \n",
+        "    MPI_Comm_size(MPI_COMM_WORLD, &size);\n",
+        "    MPI_Comm_rank(MPI_COMM_WORLD, &rank);\n",
+        "\n",
+        "    int num = lines.size();\n",
+        "\n",
+        "    /* var used only by process 0 */\n",
+        "    int current_index = 0;\n",
+        "    int displs[size];\n",
+        "    int displs_char[size];\n",
+        "    int num_found[size];\n",
+        "    int num_found_char[size];\n",
+        "\n",
+        "    if(rank > 0){\n",
+        "      /* all process sends how many rows they found */\n",
+        "      \n",
+        "      std::cout << rank << \" found \" << num << std::endl;\n",
+        "      MPI_Send(&num, 1, MPI_INT, 0, rank, MPI_COMM_WORLD);\n",
+        "    }\n",
+        "    else{\n",
+        "\n",
+        "\n",
+        "      num_found[0] = lines.size();\n",
+        "      std::cout << rank << \" found \" << num_found[0] << std::endl;\n",
+        "\n",
+        "      /* process 0 collects the informations */\n",
+        "      for(int p=1; p<size;p++){\n",
+        "        MPI_Recv(&num_found[p], 1, MPI_INT, p, p, MPI_COMM_WORLD, MPI_STATUS_IGNORE);\n",
+        "        std::cout << \"from \" << p << \" receive: \" << num_found[p] << std::endl;\n",
+        "      }\n",
+        "      \n",
+        "      \n",
+        "      for(int i = 0; i < size; i++){\n",
+        "        if(num_found[i] == 0){\n",
+        "          displs[i] = current_index;\n",
+        "        }\n",
+        "        else{\n",
+        "          displs[i] = current_index;\n",
+        "          displs_char[i] = current_index * 81;\n",
+        "          current_index += num_found[i];\n",
+        "        }\n",
+        "        num_found_char[i] = num_found[i] * 81;\n",
+        "      }\n",
+        "      std::cout << \"Total found is \" << current_index << std::endl;\n",
+        "    }\n",
+        "    MPI_Barrier(MPI_COMM_WORLD);\n",
+        "\n",
+        "    unsigned indexes[num];\n",
+        "    char l [num][81] = {};\n",
+        "\n",
+        "    for(int i = 0; i < num; i++){\n",
+        "      /* if I found any line */\n",
+        "      indexes[i] = lines[i].first;\n",
+        "      std::strcpy(l[i], lines[i].second.c_str());\n",
+        "    }\n",
+        "\n",
+        "    unsigned all_indexes[current_index];\n",
+        "    char all_l [current_index][81] = {};\n",
+        "\n",
+        "    MPI_Barrier(MPI_COMM_WORLD);\n",
+        "\n",
+        "    MPI_Gatherv(&indexes, num, MPI_UNSIGNED, &all_indexes, num_found, displs, MPI_UNSIGNED, 0, MPI_COMM_WORLD);\n",
+        "    MPI_Gatherv(&l, num * 81, MPI_CHAR, &all_l, num_found_char, displs_char, MPI_CHAR, 0, MPI_COMM_WORLD);\n",
+        "\n",
+        "    if (rank == 0){\n",
+        "      for(int i = 0; i < current_index; i++){\n",
+        "        std::cout << all_indexes[i] << \": \" << all_l[i] << std::endl;\n",
+        "      }\n",
+        "    }\n",
         "  }\n",
         "}"
       ],
@@ -1320,9 +1388,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "DabWL2E0Nt8q",
-        "outputId": "432ed7dd-dd80-4265-bef6-687506b2de6b"
+        "outputId": "ef78b10f-b379-461a-df22-5dadbb3d6622"
       },
-      "execution_count": 275,
+      "execution_count": 362,
       "outputs": [
         {
           "output_type": "stream",
@@ -1344,9 +1412,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "lOEr2Cz0ydsW",
-        "outputId": "25e0c895-a2ad-4cda-c437-abe8ce46e170"
+        "outputId": "b28f5c08-b8fd-456b-de23-578df72feb84"
       },
-      "execution_count": 276,
+      "execution_count": 363,
       "outputs": [
         {
           "output_type": "stream",
@@ -1361,16 +1429,16 @@
       "cell_type": "code",
       "source": [
         "%cd /home/mpi\n",
-        "!mpiexec --allow-run-as-root -np 4 ./grep document input_file.txt"
+        "!mpiexec --allow-run-as-root -np 4 ./grep more input_file.txt"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "ddp3MCmr0uOd",
-        "outputId": "8858a6f2-a0b4-4cfa-be30-fd32cf4def89"
+        "outputId": "a3031d84-aff0-4a0c-8839-1a32f275e35d"
       },
-      "execution_count": 278,
+      "execution_count": 364,
       "outputs": [
         {
           "output_type": "stream",
@@ -1390,48 +1458,68 @@
             "The process 3 will reads 234 rows, that starts from index 57024\n",
             "That are 18954 char!\n",
             "Send the number of rows to each process\n",
-            "1 sends : 235\n",
             "2 sends : 234\n",
-            "3 sends : 234\n",
+            "1 sends : 235\n",
             "from 1 receive: 235\n",
             "from 2 receive: 234\n",
+            "3 sends : 234\n",
             "from 3 receive: 234\n",
             "P 0 0\n",
             "P 1 235\n",
-            "P 3 704\n",
             "P 2 470\n",
-            "Start\n",
-            "Start\n",
-            "Found\n",
-            "Found\n",
-            "359:something else at this moment. The document I'm meant to be writing is, of\n",
-            "Found\n",
-            "Found\n",
-            "867:nobody else would believe him as well. Even if he documented what had happened\n",
-            "Start\n",
-            "--------------------------------------------------------------------------\n",
-            "mpiexec has exited due to process rank 1 with PID 0 on\n",
-            "node 227cfcf24558 exiting improperly. There are three reasons this could occur:\n",
-            "\n",
-            "1. this process did not call \"init\" before exiting, but others in\n",
-            "the job did. This can cause a job to hang indefinitely while it waits\n",
-            "for all processes to call \"init\". By rule, if one process calls \"init\",\n",
-            "then ALL processes must call \"init\" prior to termination.\n",
-            "\n",
-            "2. this process called \"init\", but exited without calling \"finalize\".\n",
-            "By rule, all processes that call \"init\" MUST call \"finalize\" prior to\n",
-            "exiting or it will be considered an \"abnormal termination\"\n",
-            "\n",
-            "3. this process called \"MPI_Abort\" or \"orte_abort\" and the mca parameter\n",
-            "orte_create_session_dirs is set to false. In this case, the run-time cannot\n",
-            "detect that the abort call was an abnormal termination. Hence, the only\n",
-            "error message you will receive is this one.\n",
-            "\n",
-            "This may have caused other processes in the application to be\n",
-            "terminated by signals sent by mpiexec (as reported here).\n",
-            "\n",
-            "You can avoid this message by specifying -quiet on the mpiexec command line.\n",
-            "--------------------------------------------------------------------------\n"
+            "P 3 704\n",
+            "0 found 10\n",
+            "2 found 16\n",
+            "3 found 8\n",
+            "1 found 10\n",
+            "from 1 receive: 10\n",
+            "from 2 receive: 16\n",
+            "from 3 receive: 8\n",
+            "Total found is 44\n",
+            "41: truth might fracture the group leaving everything in even more of a mess than it\n",
+            "75: initially would have guessed that they were green, but the more he looked at\n",
+            "79: them and bringing out more color. They were definitely the most unusual pair of\n",
+            "94: There wasn't less to be given to one person if you wanted to give more to\n",
+            "117: that she barely listened to the answers anymore. The answers were always the\n",
+            "118: same. Well, not exactly the same, but the same in a general sense. A more\n",
+            "201: down. It bothered her more than a little bit that this could also be used as a\n",
+            "203: much hope and energy. They had planned the trip for more than a year and both\n",
+            "208: more like a week in her mind. The fact that she still was having trouble\n",
+            "210: she could just get a little rest the entire incident might make a little more\n",
+            "254: suck them down. It bothered her more than a little bit that this could also be\n",
+            "293: herself in a little more than she bargained for. It wasn't often that she found\n",
+            "299: more to her life than this and there had to be a better way to make a living.\n",
+            "363: grateful for the distraction.  Debbie had taken George for granted for more than\n",
+            "383: events that do that to you.  Ten more steps. If he could take ten more steps it\n",
+            "385: they wouldn't listen to his brain. Ten more steps and it would be over but it\n",
+            "395: first time.  He had disappointed himself more than anyone else. That wasn't to\n",
+            "398: was something that made him even more disappointed in himself. Yet here he was,\n",
+            "412: sandcastle and take more of it away. The third wave, a big one, crashed over the\n",
+            "440: more intently to see if there were any tan lines where a ring may have been, and\n",
+            "480: show you that she can. Doubt her more and she'll prove she can again. We all\n",
+            "485: didnt know that sheets should be washed more than once a season. He said he\n",
+            "525: in a little more than she bargained for. It wasn't often that she found herself\n",
+            "550: George for granted for more than fifteen years now. He wasn't sure what exactly\n",
+            "588: was. That made her all the more relieved she had made the change. The number of\n",
+            "599: the beauty in his life at this moment would ultimately make his life much more\n",
+            "608: far more impressive than how he actually liked it. It was all about image and\n",
+            "611: green, but the more he looked at them he almost wanted to say they were a golden\n",
+            "614: constantly glinting off of them and bringing out more color. They were\n",
+            "620: wasn't that he was super strange or difficult. It was more that there wasn't\n",
+            "623: who knew him had. It was even more of a shame that they'd refuse to listen even\n",
+            "635: publically sing that first song.  He had disappointed himself more than anyone\n",
+            "638: were disappointed in him was something that made him even more disappointed in\n",
+            "646: I'm going to hire professional help tomorrow. I can't handle this anymore. She\n",
+            "648: more than I ever signed up to do.  There had to be a better way. That's all\n",
+            "652: boss. There had to be more to her life than this and there had to be a better\n",
+            "790: world for the rest of the day.  She reached her goal, exhausted. Even more\n",
+            "818: their pregnancy weight more quickly and easily. The benefits of breastfeeding\n",
+            "836: her more than a little bit that this could also be used as a metaphor for her\n",
+            "858: Hundreds of thousands? \"Not enough,\" the said under his breath. I need more.\n",
+            "861: the movement, trying to decipher exactly what she had spied. The more she\n",
+            "862: peered, however, the more she thought it might be a figment of her imagination.\n",
+            "896: smart. The fact that he was more intelligent than anyone else in the room could\n",
+            "909: and asking them to try and get their kids under a bit more control, but before\n"
           ]
         }
       ]
