Creato con Colaboratory

--- a/Grep_Challenge_10623060.ipynb
+++ b/Grep_Challenge_10623060.ipynb
@@ -1132,13 +1132,22 @@
         "\n",
         "  MPI_Init(&argc, &argv);\n",
         "\n",
+        "  double initTime;\n",
+        "  int rank;\n",
+        "  MPI_Comm_rank(MPI_COMM_WORLD, &rank);\n",
+        "\n",
         "  grep::lines_found local_filtered_lines;\n",
         "  unsigned local_lines_number;\n",
         "  std::vector<std::string> input_lines;\n",
         "\n",
+        "  initTime = MPI_Wtime();\n",
         "  grep::get_lines(input_lines, argv[2]);\n",
         "  grep::search_string(input_lines, argv[1], local_filtered_lines, local_lines_number);\n",
         "  grep::print_result(local_filtered_lines, local_lines_number);\n",
+        "\n",
+        "  if(rank == 0){\n",
+        "    std::cout << \"Communication took \" << MPI_Wtime() - initTime << \"s\" << std::endl;\n",
+        "  }\n",
         "\n",
         "  MPI_Finalize();\n",
         "\n",
@@ -1150,9 +1159,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "beb211ab-5ee3-4010-e75a-4a9658be81f5"
+        "outputId": "9c960910-9e3e-445f-cdcf-db17e5b44e8d"
       },
-      "execution_count": 279,
+      "execution_count": 411,
       "outputs": [
         {
           "output_type": "stream",
@@ -1387,8 +1396,8 @@
         "    MPI_Gatherv(&l, num * 81, MPI_CHAR, &all_l, num_found_char, displs_char, MPI_CHAR, 0, MPI_COMM_WORLD);\n",
         "\n",
         "    /* print out the result */\n",
-        "    std::ofstream out_file; //(\"home/mpi/program_result.txt\");\n",
-        "    out_file.open(\"/home/mpi/program_result.txt\");\n",
+        "    std::ofstream out_file; \n",
+        "    out_file.open(\"program_result.txt\");\n",
         "    if (rank == 0){\n",
         "      for(int i = 0; i < current_index; i++){\n",
         "        out_file << all_indexes[i]+1 << \": \" << all_l[i] << \"\\n\";\n",
@@ -1403,9 +1412,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "DabWL2E0Nt8q",
-        "outputId": "8a02e578-3fa9-41fd-e655-b195d5d37645"
+        "outputId": "af1a51bf-616b-49a4-d73e-66c436187ac8"
       },
-      "execution_count": 403,
+      "execution_count": 412,
       "outputs": [
         {
           "output_type": "stream",
@@ -1427,9 +1436,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "lOEr2Cz0ydsW",
-        "outputId": "9e94522a-3371-4cc7-c700-0ce599d38d32"
+        "outputId": "b825888f-07bb-40a7-e761-f4f9ebd58a0e"
       },
-      "execution_count": 404,
+      "execution_count": 413,
       "outputs": [
         {
           "output_type": "stream",
@@ -1444,16 +1453,121 @@
       "cell_type": "code",
       "source": [
         "%cd /home/mpi\n",
-        "!mpiexec --allow-run-as-root -np 4 ./grep more input_file.txt"
+        "!mpiexec --allow-run-as-root -np 1 ./grep more input_file.txt"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "ddp3MCmr0uOd",
-        "outputId": "41dba9f9-4650-4d0c-cb76-c03742a1b5e8"
+        "outputId": "44a5141d-6a22-40a8-ef7f-a74ad766b2c4"
       },
-      "execution_count": 405,
+      "execution_count": 418,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "/home/mpi\n",
+            "The number of lines in total is: 938\n",
+            "The process 0 will reads 938 rows, that starts from index 0\n",
+            "That are 75978 char!\n",
+            "Process 0 starts with row 0\n",
+            "Process 0 found 44\n",
+            "Total number of lines found is 44\n",
+            "Communication took 0.0290778s\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%cd /home/mpi\n",
+        "!mpiexec --allow-run-as-root -np 2 ./grep more input_file.txt"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "QI0AJFHUICJE",
+        "outputId": "3aa97332-ca2f-418a-ade3-d0ce45592c55"
+      },
+      "execution_count": 419,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "/home/mpi\n",
+            "The number of lines in total is: 938\n",
+            "The process 0 will reads 469 rows, that starts from index 0\n",
+            "That are 37989 char!\n",
+            "The process 1 will reads 469 rows, that starts from index 469\n",
+            "That are 37989 char!\n",
+            "Process 0 starts with row 0\n",
+            "Process 1 starts with row 469\n",
+            "Process 0 found 20\n",
+            "Process 1 found 24\n",
+            "Total number of lines found is 44\n",
+            "Communication took 0.0862705s\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%cd /home/mpi\n",
+        "!mpiexec --allow-run-as-root -np 3 ./grep more input_file.txt"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ttHZQDqWIEgl",
+        "outputId": "ae9d48e4-1695-433e-da9a-7909f8f0f7ea"
+      },
+      "execution_count": 420,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "/home/mpi\n",
+            "The number of lines in total is: 938\n",
+            "The process 0 will reads 313 rows, that starts from index 0\n",
+            "That are 25353 char!\n",
+            "The process 1 will reads 313 rows, that starts from index 313\n",
+            "That are 25353 char!\n",
+            "The process 2 will reads 312 rows, that starts from index 626\n",
+            "That are 25272 char!\n",
+            "Process 0 starts with row 0\n",
+            "Process 2 starts with row 626\n",
+            "Process 1 starts with row 313\n",
+            "Process 0 found 13\n",
+            "Process 1 found 18\n",
+            "Process 2 found 13\n",
+            "Total number of lines found is 44\n",
+            "Communication took 0.108662s\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%cd /home/mpi\n",
+        "!mpiexec --allow-run-as-root -np 4 ./grep more input_file.txt"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "YIz1_GNEIG9Q",
+        "outputId": "b6f158ed-953a-48e6-b245-6cf0bebbd742"
+      },
+      "execution_count": 421,
       "outputs": [
         {
           "output_type": "stream",
@@ -1469,15 +1583,228 @@
             "That are 18954 char!\n",
             "The process 3 will reads 234 rows, that starts from index 704\n",
             "That are 18954 char!\n",
-            "Process 0 starts with row 0\n",
-            "Process 2 starts with row 470\n",
             "Process 1 starts with row 235\n",
+            "Process 2 starts with row 470\n",
+            "Process 0 starts with row 0\n",
             "Process 3 starts with row 704\n",
             "Process 0 found 10\n",
             "Process 1 found 10\n",
             "Process 2 found 16\n",
             "Process 3 found 8\n",
-            "Total number of lines found is 44\n"
+            "Total number of lines found is 44\n",
+            "Communication took 0.0747162s\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%cd /home/mpi\n",
+        "!mpiexec --allow-run-as-root -np 5 ./grep more input_file.txt"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "UdJI1VITIKN7",
+        "outputId": "f524fdf2-7d11-430c-8438-d68c0c7e9a93"
+      },
+      "execution_count": 422,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "/home/mpi\n",
+            "The number of lines in total is: 938\n",
+            "The process 0 will reads 188 rows, that starts from index 0\n",
+            "That are 15228 char!\n",
+            "The process 1 will reads 188 rows, that starts from index 188\n",
+            "That are 15228 char!\n",
+            "The process 2 will reads 188 rows, that starts from index 376\n",
+            "That are 15228 char!\n",
+            "The process 3 will reads 187 rows, that starts from index 564\n",
+            "That are 15147 char!\n",
+            "The process 4 will reads 187 rows, that starts from index 751\n",
+            "That are 15147 char!\n",
+            "Process 0 starts with row 0\n",
+            "Process 4 starts with row 751\n",
+            "Process 2 starts with row 376\n",
+            "Process 1 starts with row 188\n",
+            "Process 3 starts with row 564\n",
+            "Process 0 found 6\n",
+            "Process 1 found 8\n",
+            "Process 2 found 10\n",
+            "Process 3 found 12\n",
+            "Process 4 found 8\n",
+            "Total number of lines found is 44\n",
+            "Communication took 0.0205686s\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%cd /home/mpi\n",
+        "!mpiexec --allow-run-as-root -np 6 ./grep more input_file.txt"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "YMjBNOu6IOYf",
+        "outputId": "39e7313a-b24d-4f70-c54d-a9b166d1b999"
+      },
+      "execution_count": 423,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "/home/mpi\n",
+            "The number of lines in total is: 938\n",
+            "The process 0 will reads 157 rows, that starts from index 0\n",
+            "That are 12717 char!\n",
+            "The process 1 will reads 157 rows, that starts from index 157\n",
+            "That are 12717 char!\n",
+            "The process 2 will reads 156 rows, that starts from index 314\n",
+            "That are 12636 char!\n",
+            "The process 3 will reads 156 rows, that starts from index 470\n",
+            "That are 12636 char!\n",
+            "The process 4 will reads 156 rows, that starts from index 626\n",
+            "That are 12636 char!\n",
+            "The process 5 will reads 156 rows, that starts from index 782\n",
+            "That are 12636 char!\n",
+            "Process 0 starts with row 0\n",
+            "Process 1 starts with row 157\n",
+            "Process 2 starts with row 314\n",
+            "Process 4 starts with row 626\n",
+            "Process 3 starts with row 470\n",
+            "Process 5 starts with row 782\n",
+            "Process 0 found 6\n",
+            "Process 1 found 7\n",
+            "Process 2 found 7\n",
+            "Process 3 found 11\n",
+            "Process 4 found 5\n",
+            "Process 5 found 8\n",
+            "Total number of lines found is 44\n",
+            "Communication took 0.0383401s\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%cd /home/mpi\n",
+        "!mpiexec --allow-run-as-root -np 7 ./grep more input_file.txt"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "izNzNFl0ISbx",
+        "outputId": "1b92383e-5a80-4b0d-9965-171e00a13a4a"
+      },
+      "execution_count": 424,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "/home/mpi\n",
+            "The number of lines in total is: 938\n",
+            "The process 0 will reads 134 rows, that starts from index 0\n",
+            "That are 10854 char!\n",
+            "The process 1 will reads 134 rows, that starts from index 134\n",
+            "That are 10854 char!\n",
+            "The process 2 will reads 134 rows, that starts from index 268\n",
+            "That are 10854 char!\n",
+            "The process 3 will reads 134 rows, that starts from index 402\n",
+            "That are 10854 char!\n",
+            "The process 4 will reads 134 rows, that starts from index 536\n",
+            "That are 10854 char!\n",
+            "The process 5 will reads 134 rows, that starts from index 670\n",
+            "That are 10854 char!\n",
+            "The process 6 will reads 134 rows, that starts from index 804\n",
+            "That are 10854 char!\n",
+            "Process 0 starts with row 0\n",
+            "Process 2 starts with row 268\n",
+            "Process 6 starts with row 804\n",
+            "Process 1 starts with row 134\n",
+            "Process 4 starts with row 536\n",
+            "Process 3 starts with row 402\n",
+            "Process 5 starts with row 670\n",
+            "Process 0 found 6\n",
+            "Process 1 found 5\n",
+            "Process 2 found 7\n",
+            "Process 3 found 5\n",
+            "Process 4 found 13\n",
+            "Process 5 found 1\n",
+            "Process 6 found 7\n",
+            "Total number of lines found is 44\n",
+            "Communication took 0.0666964s\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%cd /home/mpi\n",
+        "!mpiexec --allow-run-as-root -np 8 ./grep more input_file.txt"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "hP-yJD3oIWSS",
+        "outputId": "c841c727-bee1-4cbc-9d28-1bdf7b986323"
+      },
+      "execution_count": 425,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "/home/mpi\n",
+            "The number of lines in total is: 938\n",
+            "The process 0 will reads 118 rows, that starts from index 0\n",
+            "That are 9558 char!\n",
+            "The process 1 will reads 118 rows, that starts from index 118\n",
+            "That are 9558 char!\n",
+            "The process 2 will reads 117 rows, that starts from index 236\n",
+            "That are 9477 char!\n",
+            "The process 3 will reads 117 rows, that starts from index 353\n",
+            "That are 9477 char!\n",
+            "The process 4 will reads 117 rows, that starts from index 470\n",
+            "That are 9477 char!\n",
+            "The process 5 will reads 117 rows, that starts from index 587\n",
+            "That are 9477 char!\n",
+            "The process 6 will reads 117 rows, that starts from index 704\n",
+            "That are 9477 char!\n",
+            "The process 7 will reads 117 rows, that starts from index 821\n",
+            "That are 9477 char!\n",
+            "Process 0 starts with row 0\n",
+            "Process 1 starts with row 118\n",
+            "Process 3 starts with row 353\n",
+            "Process 5 starts with row 587\n",
+            "Process 7 starts with row 821\n",
+            "Process 2 starts with row 236\n",
+            "Process 6 starts with row 704\n",
+            "Process 4 starts with row 470\n",
+            "Process 0 found 5\n",
+            "Process 1 found 5\n",
+            "Process 2 found 3\n",
+            "Process 3 found 7\n",
+            "Process 4 found 4\n",
+            "Process 5 found 12\n",
+            "Process 6 found 2\n",
+            "Process 7 found 6\n",
+            "Total number of lines found is 44\n",
+            "Communication took 0.0474952s\n"
           ]
         }
       ]
@@ -1501,7 +1828,7 @@
         "\n",
         "!grep -n more /home/mpi/input_file.txt &> /home/mpi/correct_result.txt\n",
         "\n",
-        "!mpiexec --allow-run-as-root -np 4 ./grep more /home/mpi/input_file.txt\n",
+        "!mpiexec --allow-run-as-root -np 5 ./grep more /home/mpi/input_file.txt\n",
         "\n",
         "!diff /home/mpi/correct_result.txt /home/mpi/program_result.txt"
       ],
@@ -1510,9 +1837,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "88502319-1825-49cf-cc71-c98e3c7bb153"
+        "outputId": "6a54dfa9-44a2-44c5-fe5e-1b3fe80a1fcf"
       },
-      "execution_count": 406,
+      "execution_count": 426,
       "outputs": [
         {
           "output_type": "stream",
@@ -1520,23 +1847,28 @@
           "text": [
             "/home/mpi\n",
             "The number of lines in total is: 938\n",
-            "The process 0 will reads 235 rows, that starts from index 0\n",
-            "That are 19035 char!\n",
-            "The process 1 will reads 235 rows, that starts from index 235\n",
-            "That are 19035 char!\n",
-            "The process 2 will reads 234 rows, that starts from index 470\n",
-            "That are 18954 char!\n",
-            "The process 3 will reads 234 rows, that starts from index 704\n",
-            "That are 18954 char!\n",
+            "The process 0 will reads 188 rows, that starts from index 0\n",
+            "That are 15228 char!\n",
+            "The process 1 will reads 188 rows, that starts from index 188\n",
+            "That are 15228 char!\n",
+            "The process 2 will reads 188 rows, that starts from index 376\n",
+            "That are 15228 char!\n",
+            "The process 3 will reads 187 rows, that starts from index 564\n",
+            "That are 15147 char!\n",
+            "The process 4 will reads 187 rows, that starts from index 751\n",
+            "That are 15147 char!\n",
             "Process 0 starts with row 0\n",
-            "Process 3 starts with row 704\n",
-            "Process 1 starts with row 235\n",
-            "Process 2 starts with row 470\n",
-            "Process 0 found 10\n",
-            "Process 1 found 10\n",
-            "Process 2 found 16\n",
-            "Process 3 found 8\n",
+            "Process 2 starts with row 376\n",
+            "Process 1 starts with row 188\n",
+            "Process 3 starts with row 564\n",
+            "Process 4 starts with row 751\n",
+            "Process 0 found 6\n",
+            "Process 1 found 8\n",
+            "Process 2 found 10\n",
+            "Process 3 found 12\n",
+            "Process 4 found 8\n",
             "Total number of lines found is 44\n",
+            "Communication took 0.036081s\n",
             "1,44c1,44\n",
             "< 42:truth might fracture the group leaving everything in even more of a mess than it\n",
             "< 76:initially would have guessed that they were green, but the more he looked at\n",
@@ -1630,6 +1962,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "LVp3Cw80I5Lf"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
